--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,29 @@ phases:
     commands:
       - echo Nothing to do in the pre_build phase...
       - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain java-hello --domain-owner 463146931926 --query authorizationToken --output text`
+      - cp /root/.m2/settings.xml /root/.m2/settings.xml.bkp
+      - echo '<profiles>
+  <profile>
+    <id>java-hello-java-demo</id>
+    <activation>
+      <activeByDefault>true</activeByDefault>
+    </activation>
+    <repositories>
+      <repository>
+        <id>java-hello-java-demo</id>
+        <url>https://java-hello-463146931926.d.codeartifact.us-east-1.amazonaws.com/maven/java-demo/</url>
+      </repository>
+    </repositories>
+  </profile>
+</profiles>' >> /root/.m2/settings.xml
+      - echo '<servers>
+  <server>
+    <id>java-hello-java-demo</id>
+    <username>aws</username>
+    <password>${env.CODEARTIFACT_AUTH_TOKEN}</password>
+  </server>
+</servers>' >> /root/.m2/settings.xml
+
   build:
     commands:
       - echo Build started on `date`
@@ -15,6 +38,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+      - cat /root/.m2/settings.xml
 artifacts:
   files:
     - target/helloworld-1.0.jar
