--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,10 +7,8 @@ phases:
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
-      - cd /tmp/
-      - 
       - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain java-hello --domain-owner 463146931926 --query authorizationToken --output text`
-      - cp settings.xml /root/
+      - cp settings.xml /root/.m2/
 
   build:
     commands:
