--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn deploy
+      - mvn deploy -X
   post_build:
     commands:
       - echo Build completed on `date`
